--- a/src/fabric_interface/projects/templates/projects/project_form.html
+++ b/src/fabric_interface/projects/templates/projects/project_form.html
@@ -33,17 +33,18 @@
             <li class="action"><a href="{% url 'host_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
         </ul>
     </div>
-    <!-- panel/users -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Users" %}</li>
-            <li><a href="#">John Doe</a></li>
-            {% for user in user_list %}
-                <li><a href="{% url 'project_detail' pk=user.pk %}">{{ user.name }}</a></li>
-            {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
-        </ul>
-    </div>
+    {% if user.is_staff %}
+        <!-- panel/users -->
+        <div class="well well-sm">
+            <ul class="nav nav-list">
+                <li class="nav-header">{% trans "Users" %}</li>
+                {% for user in user_list %}
+                    <li><a href="{% url 'user_detail' pk=user.pk %}">{{ user }}</a></li>
+                {% endfor %}
+                <li class="action"><a href="{% url 'user_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
+            </ul>
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
