--- a/src/fabric_interface/templates/fabric_interface/users/user_detail.html
+++ b/src/fabric_interface/templates/fabric_interface/users/user_detail.html
@@ -1,6 +1,6 @@
 {% extends "fabric_interface/layouts/sidebar_double.html" %}
 
-{% load i18n bootstrap3 %}
+{% load i18n debug %}
 
 {% block title %}{{ title }}{% endblock %}
 
@@ -11,7 +11,13 @@
             <li class="nav-header">{% trans "All projects" %}</li>
             {% for project in project_list %}
                 <li class="{% if project.slug == object.slug %}active{% endif %}">
-                    <a href="{% url 'project_detail' slug=project.slug %}">{{ project }}</a>
+                    <a href="{% url 'project_detail' slug=project.slug %}">
+                        {% if project in object.projects.all %}
+                            <i class="glyphicon glyphicon-check"></i>
+                        {% else %}
+                            <i class="glyphicon glyphicon-unchecked"></i>
+                        {% endif %} {{ project }}
+                    </a>
                 </li>
             {% endfor %}
             <li class="action">
@@ -24,11 +30,9 @@
     <!-- panel/hosts -->
     <div class="well well-sm">
         <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Available hosts" %}</li>
+            <li class="nav-header">{% trans "Hosts" %}</li>
             {% for host in host_list %}
                 <li><a href="{% url 'host_detail' slug=host.slug %}">{{ host }}</a></li>
-            {% empty %}
-                <li>{% trans "No hosts available." %}</li>
             {% endfor %}
             <li class="action"><a href="{% url 'host_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
         </ul>
@@ -39,7 +43,7 @@
             <ul class="nav nav-list">
                 <li class="nav-header">{% trans "Users" %}</li>
                 {% for user in user_list %}
-                    <li><a href="{% url 'user_detail' pk=user.pk %}">{{ user }}</a></li>
+                    <li class="{% if user.pk == object.pk %}active{% endif %}"><a href="{% url 'user_detail' pk=user.pk %}">{{ user }}</a></li>
                 {% endfor %}
                 <li class="action"><a href="{% url 'user_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
             </ul>
@@ -48,20 +52,18 @@
 {% endblock %}
 
 {% block content %}
-    <h4>{% trans "Delete project" %} '{{ project }}'</h4>
+    <h4>{% trans "User" %} '{{ object }}'</h4>
     <hr />
-    <h3>Are you sure? There's no going back!</h3>
-    <form method="post" role="form">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                {% bootstrap_field field %}
-            </div>
-        {% endfor %}
-        {% buttons %}
-            <button type="submit" class="btn btn-danger">
-                {% bootstrap_icon "remove" %} {{ title }}
-            </button>
-        {% endbuttons %}
-    </form>
+    {{ object }}
+{% endblock %}
+
+{% block sidebar_right %}
+    <!-- panel/danger_zone -->
+    <div class="well well-sm">
+        <ul class="nav nav-list">
+            <li class="nav-header">{% trans "Danger Zone" %}</li>
+            <li><a href="{% url 'user_update' pk=object.pk %}">{% trans "Edit" %}</a></li>
+            <li><a href="{% url 'user_delete' pk=object.pk %}">{% trans "Delete" %}</a></li>
+        </ul>
+    </div>
 {% endblock %}
