--- a/src/fabric_interface/templates/fabric_interface/users/user_form.html
+++ b/src/fabric_interface/templates/fabric_interface/users/user_form.html
@@ -37,16 +37,18 @@
             <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add host" %}</a></li>
         </ul>
     </div>
-    <!-- panel/users -->
-    <div class="well well-sm">
-        <ul class="nav nav-list">
-            <li class="nav-header">{% trans "Users" %}</li>
-            {% for user in user_list %}
-                <li class="{% if user.slug == object.slug %}active{% endif %}"><a href="{% url 'user_detail' pk=user.pk %}">{{ user.name }}</a></li>
-            {% endfor %}
-            <li class="action"><a href=""><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
-        </ul>
-    </div>
+    {% if user.is_staff %}
+        <!-- panel/users -->
+        <div class="well well-sm">
+            <ul class="nav nav-list">
+                <li class="nav-header">{% trans "Users" %}</li>
+                {% for user in user_list %}
+                    <li class="{% if user.pk == object.pk %}active{% endif %}"><a href="{% url 'user_detail' pk=user.pk %}">{{ user }}</a></li>
+                {% endfor %}
+                <li class="action"><a href="{% url 'user_create' %}"><i class="glyphicon glyphicon-plus"></i> {% trans "Add user" %}</a></li>
+            </ul>
+        </div>
+    {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -68,7 +70,7 @@
                 {% endif %}
             </button>
             {% if action != 'create' %}
-                <a href="{% url 'host_delete' slug=object.slug %}" class="btn btn-danger">
+                <a href="{% url 'user_delete' pk=object.pk %}" class="btn btn-danger">
                     {% bootstrap_icon "remove" %} {% trans "Delete" %}
                 </a>
             {% endif %}
