--- a/src/fabric_interface/projects/templates/projects/project_detail.html
+++ b/src/fabric_interface/projects/templates/projects/project_detail.html
@@ -32,13 +32,11 @@
                     <span class="nav-header">{% trans "Stages" %}</span>
                 </div>
                 <div class="panel-body">
-                    {% with object.stage_set.all as stages %}
-                        {% if stages %}
-                            {% render_table stages "fabric_interface/tables/bootstrap.html" %}
-                        {% else %}
-                            No stages found.
-                        {% endif %}
-                    {% endwith %}
+                    {% if stages %}
+                        {% render_table stages %}
+                    {% else %}
+                        No stages found.
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -51,7 +49,7 @@
                 </div>
                 <div class="panel-body">
                     {% if configurations %}
-                        {% render_table configurations "fabric_interface/tables/bootstrap.html" %}
+                        {% render_table configurations %}
                     {% else %}
                         No stages found.
                     {% endif %}
